style.css
@import url('https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Molle:ital@1&family=Montserrat&display=swap');

body {
    background-color: blanchedalmond;
}

header {
    text-align: center;
    font-family: 'Molle', cursive;
    color: red;
}

.paper {
    background-color: grey;
    padding: 10px;
    width: 300px;
}

.intro {
    color: white;
    background-color: red;
    height: 200px;
    display: grid;
    border-radius: 10px;
    text-align: center;
    grid-template-rows: 15% 30% 40% 10%;
}

.paper {
    margin-left: 430px;
}

.name {
    background-color: white;
    color: black;
    text-align: center;
    padding-bottom: 5px;
    font-family: 'Tangerine', cursive;
    font-size: 30px;
    font-weight: bold;
}

.side-nav {
    height: auto;
    width: 160px;
    background-color: grey;
    position: fixed;
}

.side-nav a {
    padding: 6px 8px 6px 16px;
    font-size: 15px;
    text-align: left;
    display: block;
    color: white;
}

.side-nav a:hover {
    color: red;
    font-size: 17px;
}

.footer {
    color:white;
    text-align: center;
    width: 100%;
    background-color: grey;
    position: absolute;
    bottom: 0;
    left: 0;
    
}

